Fix a few image links
git-svn-id: https://svn.apache.org/repos/asf/karaf/sandbox/website@1050310 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/download.page
+++ b/src/main/webapp/index/community/download.page
@@ -9,7 +9,7 @@ h2. Latest Releases
 
 {column:width=20%}
 {div:style=padding-right:20px;float:left;}
-!karaf-box.png|width=256!
+!/images/karaf-box.png|width=256!
 {div}
 {column}
 
