--- a/src/main/webapp/index.page
+++ b/src/main/webapp/index.page
@@ -11,12 +11,12 @@ Apache Karaf is a small OSGi based runtime which provides a lightweight containe
 Here is a short list of features supported by the Karaf:
 {include: Karaf Features}
 
-!karaf2.png!
+!/images/karaf2.png!
 {column}
 {column}
 {center}
 *[Download Karaf 2.1.2|Karaf 2.1.2 Release]*
-[!karaf-box.png|width=256!|Download]
+[!/images/karaf-box.png|width=256!|Download]
 {center}
 {html}
 <script src="http://widgets.twimg.com/j/2/widget.js"></script>
