--- a/src/main/webapp/snippets/karaf-overview.page
+++ b/src/main/webapp/snippets/karaf-overview.page
@@ -9,4 +9,4 @@ Apache Karaf is a small OSGi based runtime which provides a lightweight containe
 Here is a short list of features supported by the Karaf:
 {include:Karaf Features}
 
-!karaf2.png!
+!/images/karaf2.png!
