Update sandbox site with latest confluence changes
git-svn-id: https://svn.apache.org/repos/asf/karaf/sandbox/website@1068779 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/team.page
+++ b/src/main/webapp/index/community/team.page
@@ -1,6 +1,6 @@
 ---
 title: Team
-page_version: 19
+page_version: 24
 page_creator: gnodet
 page_modifier: gnodet
 --- pipeline:conf
@@ -15,13 +15,14 @@ h3. Committers
 | [?ukasz Dywicki|http://blog.code-house.org] | | | [Code-House|http://code-house.org] | 
 | Freeman Fang | ffang | (/) |  [FuseSource|http://fusesource.com/] |
 | Jarek Gawor | jgawor | (/) | [IBM|http://www.ibm.com] |
-| [Jamie Goodyear|http://icodebythesea.blogspot.com] | jgoodyear | (/) | [FuseSource|http://fusesource.com/] |
+| [Jamie Goodyear|http://icodebythesea.blogspot.com] | jgoodyear | (/) | |
 | David Jencks | djencks | (/) | [IBM|http://www.ibm.com] |
 | Alex Karasulu | akarasulu | (/) | |
 | [Charles Moulliard|http://cmoulliard.blogspot.com] | cmoulliard | (/) | [FuseSource|http://fusesource.com/] |
-| Achim Nierbeck | | | |
+| Achim Nierbeck | anierbeck | (/) | |
 | [Guillaume Nodet|http://gnodet.blogspot.com] | gnodet | (/) | [FuseSource|http://fusesource.com/] |
 | Jean-Baptiste Onofré | jbonofre | (/) | [Fimasys|http://www.fimasys.com] |
+| Andreas Pieber| pieber | (/) | |
 | James Strachan | jstrachan | | [FuseSource|http://fusesource.com/] |
 | Adrian Trenaman | | | [FuseSource|http://fusesource.com/] | 
 | Gert Vanthienen | gertv | (/) | [FuseSource|http://fusesource.com/] |
@@ -30,5 +31,5 @@ h3. Contributors
 
 || Name || Organisation ||
 | [Lars Heinemann|http://lhein.blogspot.com/] | [FuseSource |http://fusesource.com/]|
-| Andreas Pieber| |
-
+| Michael Van Geertruy | |
+| Geert Schuring | |
