--- a/src/main/webapp/index/developers/logo.page
+++ b/src/main/webapp/index/developers/logo.page
@@ -8,5 +8,5 @@ h1. Logo
 
 The current logo is available from this page in [PNG|^karaf-logo.png] and [SVG|^karaf-logo.svg] format.
 
-!karaf-logo.png!
+!/images/karaf-logo.png!
 
