--- a/src/main/webapp/logo-proposal/proposed-logo.page
+++ b/src/main/webapp/logo-proposal/proposed-logo.page
@@ -7,5 +7,5 @@ page_modifier: gnodet
 h1. Proposed logo
 
 ||Number||Logo||
-|#1|!logokaraf.png!|
+|#1|!/images/logokaraf.png!|
 |#2|!http://idisk.me.com/chirino/Public/Pictures/Skitch/Adobe_Fireworks_CS5-20101121-073046.jpg!|
