--- a/src/main/webapp/snippets/karaf-welcome-screen.page
+++ b/src/main/webapp/snippets/karaf-welcome-screen.page
@@ -1,8 +1,8 @@
 ---
 title: Karaf welcome screen
-page_version: 4
+page_version: 5
 page_creator: gnodet
-page_modifier: gnodet
+page_modifier: nanthrax
 --- pipeline:conf
 {code:borderStyle=solid}
         __ __                  ____      
@@ -11,7 +11,7 @@ page_modifier: gnodet
      / /| |/ /_/ / /  / /_/ / __/        
     /_/ |_|\__,_/_/   \__,_/_/         
 
-  Apache Felix Karaf (2.0.0)
+  Apache Felix Karaf (2.1.2)
 
 Hit '<tab>' for a list of available commands
 and '[cmd] --help' for help on a specific command.
