--- a/src/main/webapp/index/community/download.page
+++ b/src/main/webapp/index/community/download.page
@@ -1,8 +1,8 @@
 ---
 title: Download
-page_version: 13
+page_version: 15
 page_creator: gnodet
-page_modifier: jgoodyear
+page_modifier: gnodet
 --- pipeline:conf
 h2. Latest Releases
 {section}
@@ -21,7 +21,7 @@ Grab these releases while they are hot!
 The latest release is [Karaf 2.1.3 Release].
 
 Releases:
-{children:sort=creation|reverse=true}
+* [#Karaf 2.1.3]
 
 {div}
 {column}
@@ -35,6 +35,8 @@ The above URLs use the Apache Mirror system to redirect you to a suitable mirror
 {info}
 h2. Karaf 2.1.3
 
+[Release Notes|Karaf 2.1.3 Release]
+
 h3. Binary Distribution
 
 ||Description||Download Link|| || || ||
@@ -47,80 +49,15 @@ h3. Source Distribution
 |Windows Source Distribution| [apache-karaf-2.1.3-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.1.3/apache-karaf-2.1.3-src.zip]|[PGP|http://www.apache.org/dist/karaf/2.1.3/apache-karaf-2.1.3-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.1.3/apache-karaf-2.1.3-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.1.3/apache-karaf-2.1.3-src.zip.md5]|
 |Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.1.3-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.1.3/apache-karaf-2.1.3-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.1.3/apache-karaf-2.1.3-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.1.3/apache-karaf-2.1.3-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.1.3/apache-karaf-2.1.3-src.tar.gz.md5]|
 
-h2. Karaf 2.1.2
-
-h3. Binary Distribution
-
-||Description||Download Link|| || || ||
-|Windows Distribution| [apache-karaf-2.1.2.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.1.2/apache-karaf-2.1.2.zip]|[PGP|http://www.apache.org/dist/karaf/2.1.2/apache-karaf-2.1.2.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.1.2/apache-karaf-2.1.2.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.1.2/apache-karaf-2.1.2.zip.md5]|
-|Unix/Linux/Cygwin Distribution| [apache-karaf-2.1.2.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.1.2/apache-karaf-2.1.2.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.1.2/apache-karaf-2.1.2.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.1.2/apache-karaf-2.1.2.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.1.2/apache-karaf-2.1.2.tar.gz.md5]|
-
-h3. Source Distribution
-
-||Description||Download Link|| || || ||
-|Windows Source Distribution| [apache-karaf-2.1.2-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.1.2/apache-karaf-2.1.2-src.zip]|[PGP|http://www.apache.org/dist/karaf/2.1.2/apache-karaf-2.1.2-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.1.2/apache-karaf-2.1.2-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.1.2/apache-karaf-2.1.2-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.1.2-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.1.2/apache-karaf-2.1.2-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.1.2/apache-karaf-2.1.2-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.1.2/apache-karaf-2.1.2-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.1.2/apache-karaf-2.1.2-src.tar.gz.md5]|
-
-h2. Karaf 2.1.1
-
-h3. Binary Distribution
-
-||Description||Download Link|| || || ||
-|Windows Distribution| [apache-karaf-2.1.1.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.1.1/apache-karaf-2.1.1.zip]|[PGP|http://www.apache.org/dist/karaf/2.1.1/apache-karaf-2.1.1.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.1.1/apache-karaf-2.1.1.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.1.1/apache-karaf-2.1.1.zip.md5]|
-|Unix/Linux/Cygwin Distribution| [apache-karaf-2.1.1.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.1.1/apache-karaf-2.1.1.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.1.1/apache-karaf-2.1.1.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.1.1/apache-karaf-2.1.1.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.1.1/apache-karaf-2.1.1.tar.gz.md5]|
-
-h3. Source Distribution
-
-||Description||Download Link|| || || ||
-|Windows Source Distribution| [apache-karaf-2.1.1-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.1.1/apache-karaf-2.1.1-src.zip]|[PGP|http://www.apache.org/dist/karaf/2.1.1/apache-karaf-2.1.1-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.1.1/apache-karaf-2.1.1-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.1.1/apache-karaf-2.1.1-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.1.1-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.1.1/apache-karaf-2.1.1-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.1.1/apache-karaf-2.1.1-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.1.1/apache-karaf-2.1.1-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.1.1/apache-karaf-2.1.1-src.tar.gz.md5]|
-
-h2. Karaf 2.1.0
-
-h3. Binary Distribution
-
-||Description||Download Link|| || || ||
-|Windows Distribution| [apache-karaf-2.1.0.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.1.0/apache-karaf-2.1.0.zip]|[PGP|http://www.apache.org/dist/karaf/2.1.0/apache-karaf-2.1.0.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.1.0/apache-karaf-2.1.0.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.1.0/apache-karaf-2.1.0.zip.md5]|
-|Unix/Linux/Cygwin Distribution| [apache-karaf-2.1.0.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.1.0/apache-karaf-2.1.0.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.1.0/apache-karaf-2.1.0.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.1.0/apache-karaf-2.1.0.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.1.0/apache-karaf-2.1.0.tar.gz.md5]|
-
-h3. Source Distribution
-
-||Description||Download Link|| || || ||
-|Windows Source Distribution| [apache-karaf-2.1.0-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.1.0/apache-karaf-2.1.0-src.zip]|[PGP|http://www.apache.org/dist/karaf/2.1.0/apache-karaf-2.1.0-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.1.0/apache-karaf-2.1.0-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.1.0/apache-karaf-2.1.0-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.1.0-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.1.0/apache-karaf-2.1.0-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.1.0/apache-karaf-2.1.0-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.1.0/apache-karaf-2.1.0-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.1.0/apache-karaf-2.1.0-src.tar.gz.md5]|
-
-h2. Karaf 2.0.0
-
-h3. Binary Distribution
-
-||Description||Download Link|| || || ||
-|Windows Distribution| [apache-karaf-2.0.0.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.0.0/apache-karaf-2.0.0.zip]|[PGP|http://www.apache.org/dist/karaf/2.0.0/apache-karaf-2.0.0.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.0.0/apache-karaf-2.0.0.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.0.0/apache-karaf-2.0.0.zip.md5]|
-|Unix/Linux/Cygwin Distribution| [apache-karaf-2.0.0.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.0.0/apache-karaf-2.0.0.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.0.0/apache-karaf-2.0.0.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.0.0/apache-karaf-2.0.0.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.0.0/apache-karaf-2.0.0.tar.gz.md5]|
-
-h3. Source Distribution
-
-||Description||Download Link|| || || ||
-|Windows Source Distribution| [apache-karaf-2.0.0-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.0.0/apache-karaf-2.0.0-src.zip]|[PGP|http://www.apache.org/dist/karaf/2.0.0/apache-karaf-2.0.0-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.0.0/apache-karaf-2.0.0-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.0.0/apache-karaf-2.0.0-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.0.0-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.0.0/apache-karaf-2.0.0-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.0.0/apache-karaf-2.0.0-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.0.0/apache-karaf-2.0.0-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.0.0/apache-karaf-2.0.0-src.tar.gz.md5]|
-
-h2. Karaf 1.6.0
-
-h3. Binary Distribution
-
-||Description||Download Link|| || || ||
-|Windows Distribution| [apache-felix-karaf-1.6.0.zip|http://www.apache.org/dyn/closer.cgi/karaf/1.6.0/apache-felix-karaf-1.6.0.zip]|[PGP|http://www.apache.org/dist/karaf/1.6.0/apache-felix-karaf-1.6.0.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/1.6.0/apache-felix-karaf-1.6.0.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/1.6.0/apache-felix-karaf-1.6.0.zip.md5]|
-|Unix/Linux/Cygwin Distribution| [apache-felix-karaf-1.6.0.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/1.6.0/apache-felix-karaf-1.6.0.tar.gz]|[PGP|http://www.apache.org/dist/karaf/1.6.0/apache-felix-karaf-1.6.0.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/1.6.0/apache-felix-karaf-1.6.0.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/1.6.0/apache-felix-karaf-1.6.0.tar.gz.md5]|
-
-h3. Source Distribution
-
-||Description||Download Link|| || || ||
-|Windows Source Distribution| [apache-felix-karaf-1.6.0-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/1.6.0/apache-felix-karaf-1.6.0-src.zip]|[PGP|http://www.apache.org/dist/karaf/1.6.0/apache-felix-karaf-1.6.0-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/1.6.0/apache-felix-karaf-1.6.0-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/1.6.0/apache-felix-karaf-1.6.0-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-felix-karaf-1.6.0-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/1.6.0/apache-felix-karaf-1.6.0-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/1.6.0/apache-felix-karaf-1.6.0-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/1.6.0/apache-felix-karaf-1.6.0-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/1.6.0/apache-felix-karaf-1.6.0-src.tar.gz.md5]|
-
-h3. Keys
+h2. Keys
 The {{KEYS}} used to sign the release can be found [here|http://www.apache.org/dist/karaf/KEYS].
 
 h2. Snapshots
 If you want to give a try to the latest snapshots, they are available at the following location:
-  https://repository.apache.org/content/groups/snapshots-group/org/apache/karaf/apache-karaf/1.99.0-SNAPSHOT/
+  https://repository.apache.org/content/groups/snapshots-group/org/apache/karaf/apache-karaf/
+
+h2. Previous releases
+
+Older releases can be found in the [archives|Archives] section.
+
 
