Update with latest changes
git-svn-id: https://svn.apache.org/repos/asf/karaf/sandbox/website@1068849 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/site/navigation.page
+++ b/src/main/webapp/site/navigation.page
@@ -1,8 +1,8 @@
 ---
 title: Navigation
-page_version: 9
+page_version: 10
 page_creator: gnodet
-page_modifier: nanthrax
+page_modifier: gnodet
 --- pipeline:conf
 h3. [Overview|Karaf Overview]
 
@@ -46,5 +46,4 @@ h3. [Developers]
 - [Roadmap]
 - [Source]
 - [Building]
-- [JavaDoc]
 - [IRC Room]
