--- a/src/main/webapp/index.page
+++ b/src/main/webapp/index.page
@@ -1,8 +1,8 @@
 ---
 title: Index
-page_version: 12
+page_version: 13
 page_creator: gnodet
-page_modifier: pieber
+page_modifier: nanthrax
 --- pipeline:conf
 {section}
 {column}
@@ -15,7 +15,7 @@ Here is a short list of features supported by the Karaf:
 {column}
 {column}
 {center}
-*[Download Karaf 2.1.2|Karaf 2.1.2 Release]*
+*[Download Karaf 2.1.3|Karaf 2.1.3 Release]*
 [!/images/karaf-box.png|width=256!|Download]
 {center}
 {html}
