Fix css for footer, add google analytics
git-svn-id: https://svn.apache.org/repos/asf/karaf/sandbox/website@1069546 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -76,9 +76,12 @@ body {
   padding: 0px 50px 0px 50px;
   min-height: 0em;
   text-align: center;
-  color: #5b8fbe;
+  color: white;
   font-size: 65%;
   font-family: Verdana, arial, sans-serif;
+}
+#site-footer {
+  margin: 5px;
 }
 #footer a:link, #footer a:visited {
   color: white;
