--- a/src/main/webapp/site/navigation.page
+++ b/src/main/webapp/site/navigation.page
@@ -1,19 +1,20 @@
 ---
 title: Navigation
-page_version: 11
+page_version: 14
 page_creator: gnodet
 page_modifier: gnodet
 --- pipeline:conf
 h3. [Overview|Karaf Overview]
 
 - [Home|Index]
-- [Getting Started|2. Quick Start]
+- [Getting Started|http://karaf.apache.org/manual/2.1.99-SNAPSHOT/quick-start.html]
 - [FAQ]
 - [Download]
 
-h3. [Documentation]
+h3. [Documentation|http://karaf.apache.org/manual/2.1.99-SNAPSHOT]
 
-- [Users' Guide|Karaf Users' Guide]
+- [Users' Guide|http://karaf.apache.org/manual/2.1.99-SNAPSHOT/users-guide/index.html]
+- [Developer Guide|http://karaf.apache.org/manual/2.1.99-SNAPSHOT/developers-guide/index.html]
 
 h3. Search
 
@@ -37,16 +38,16 @@ h3. [Community]
 - [Mailing Lists]
 - [News]
 - [Articles]
-- [Site]
 - [Team]
 
 h3. [Developers]
 
-- [Developer Guide|Developers]
 - [Roadmap]
 - [Source]
 - [Building]
 - [IRC Room]
+- [Site]
+- [Wiki|https://cwiki.apache.org/confluence/display/KARAF]
 
 h3. [ASF|http://www.apache.org/]
 
