--- a/src/main/webapp/index/community/faq/how-do-i-edit-the-website.page
+++ b/src/main/webapp/index/community/faq/how-do-i-edit-the-website.page
@@ -6,30 +6,58 @@ page_modifier: gnodet
 --- pipeline:conf
 h2. How do I edit the website?
 
-The website is all contained on a Wiki so that you can [contribute|Contributing] providing you are happy to license all your contributions under the [Apache Software License version 2.0|http://www.apache.org/licenses/LICENSE-2.0]
+h3. Organization
 
-h3. You must have signed an ICLA to be able to edit the wiki pages
+The web site consists of three main resources:
+* the main web site available at [http://karaf.apache.org/]
+* the manuals available at [http://karaf.apache.org/manual/]
+* the wiki available at [http://cwiki.apache.org/KARAF/]
+
+h3. Main site
+
+The main website sources are located in svn at [{{https://svn.apache.org/repos/asf/karaf/site/trunk}}].  This source tree is a maven project that uses [Scalate|http://scalate.fusesource.org] as a templating engine.
+The easiest way to make some modifications to it is to run the following command:
+{code}
+mvn jetty:run -Plive
+{code}
+This will start up a jetty server and you'll be able to see the live rendering of the web site at
+{code}
+http://localhost:8080/
+{code}
+
+You can now make modifications to the source tree and reload the web page in your browser.  Changes will be picked up immediately.
+
+The {{-Plive}} parameter allows updating without restarting the web server, but in some cases, there may be a few problems, so a final check can be done by running
+{code}
+mvn install
+{code}
+
+and checking the resulting site in {{target/sitegen}}.
+
+If you don't have committer access, create a JIRA and attach the {{svn diff}} output to it so that we can apply it.
+If you are a committer, just commit your changes.
+
+To deploy your modifications, you need to run the following command:
+{code}
+mvn scalate:deploy
+{code}
+
+
+h3. Manuals
+
+After a release, the corresponding manual should be uploaded and the [documentation] updated.
+Uploading the manual can be done by checking out the associated tag and running {{mvn scalate:deploy}} inside the {{manual}} svn director.
+
+h3. Wiki
+
+The wiki contains the 2.1.x manual and any collaboration documents, such as the roadmaps, etc...
+
+You must have signed an ICLA to be able to edit the wiki pages
 * Download and print the Apache Contributor License Agreement from [here|http://www.apache.org/dev/new-committers-guide.html]. You need to sign it, scan it and email it
 * wait for your name to appear on the [list of received CLAs|http://people.apache.org/committer-index.html] see the _unlisted CLAs_ section.
 * send an email to the [Karaf dev forum|Mailing Lists] about that your ICLA have been received at Apache.
 
-h3. How to edit
+To edit a page, just hit the *edit* link right at the bottom of any page. To be able to edit you need to register with confluence.
 
-To edit a page, just hit the *edit* link right at the bottom of any page. To be able to edit you need to register with confluence. 
+Note that after you've changed the wiki it is immediately rendered on the {{http://cwiki.apache.org/KARAF/}} site so you can test it out; then up to an hour or two later it is updated on the Apache site.
 
-{info:title=Spam Prevention}
-We have been attacked by spammers so we are running a spam-avoiding scheme. So you have to ask to be added to the editing group of Confluence. This is quick and easy to do.
-
-First click edit on a page to get to the confluence site of http://cwiki.apache.org/confluence/display/KARAF/Index then register.
-
-Then send an mail to the [developer forum|http://www.nabble.com/xxx.html] giving details of your confluence and/or JIRA username and we can grant you the necessary editing karma.
-{info}
-
-Note that after you've changed the wiki it is immediately rendered on the http://cwiki.apache.org/KARAF/ site so you can test it out; then up to an hour or two later it is updated on the Apache site.
-
-h3. How the site works
-There are a few special pages; for example the [Navigation] page is the left hand navigation bar and the [QuickLinks] is the top right navigation bar.
-
-Other useful [links|Site] are
-
-{include:Site}
