--- a/src/main/webapp/index/community/faq/how-does-the-website-work.page
+++ b/src/main/webapp/index/community/faq/how-does-the-website-work.page
@@ -6,13 +6,7 @@ page_modifier: gnodet
 --- pipeline:conf
 h2. How does the website work
 
-This website is actually rendered from the Wiki contents that you can [edit|How do I edit the website].  
-When viewing a page on the static HTML website you can click on the *edit* link (bottom of the page) and you can edit the page. 
+This website is actually rendered offline and uploaded by a committer after it has changed.
 
 For more information see [How do I edit the website]. 
 
-Other useful [Site links|Site] are
-
-{include:Site}
-
-Note that it takes a little while to update the Apache site at http://karaf.apache.org/ due to caching. Though this site usually updates quickly: http://cwiki.apache.org/KARAF/
