Fix some website links
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1069939 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community.page
+++ b/src/main/webapp/index/community.page
@@ -4,4 +4,18 @@ page_version: 1
 page_creator: gnodet
 page_modifier: gnodet
 --- pipeline:conf
-{children}
+h1. Community
+
+This section contains information for all the community.
+
+* [Articles]
+* [Board Reports]
+* [Contributing]
+* [Discussion Forums]
+* [Download]
+* [Faq]
+* [Mailing Lists]
+* [News]
+* [Support]
+* [Team]
+* [Tips For Getting Help]
