--- a/src/main/webapp/index/developers.page
+++ b/src/main/webapp/index/developers.page
@@ -4,8 +4,12 @@ page_version: 2
 page_creator: gnodet
 page_modifier: gnodet
 --- pipeline:conf
-h2. Developers
+h1. Developers
 
 The following section contains developer related links for Apache Karaf
 
-{children:depth=3} 
+* [Building|building]
+* [IRC Room|irc-room]
+* [Logo|logo]
+* [Release guide|release-guide]
+* [Source|source]
