--- a/src/main/webapp/index/community/download.page
+++ b/src/main/webapp/index/community/download.page
@@ -18,7 +18,7 @@ h2. Latest Releases
 
 Grab these releases while they are hot!
 
-The latest release is [Karaf 2.1.4 Release].
+The latest release is [Karaf 2.1.4 Release|download/karaf-2.1.4-release.html].
 
 Releases:
 * [#Karaf 2.1.4]
