[KARAF-377] Apache karaf 2.1.4 release
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1070976 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/download.page
+++ b/src/main/webapp/index/community/download.page
@@ -35,7 +35,7 @@ The above URLs use the Apache Mirror system to redirect you to a suitable mirror
 {info}
 h2. Karaf 2.1.4
 
-[Release Notes|Karaf 2.1.4 Release]
+[Release Notes|download/karaf-2.1.4-release.html]
 
 h3. Binary Distribution
 
