--- a/src/main/webapp/index.page
+++ b/src/main/webapp/index.page
@@ -15,7 +15,7 @@ Here is a short list of features supported by the Karaf:
 {column}
 {column}
 {center}
-*[Download Karaf 2.1.4|Karaf 2.1.4 Release]*
+*[Download Karaf 2.1.4|index/community/download.html#Karaf2.1.4]*
 [!/images/karaf-box.png|width=256!|Download]
 {center}
 {html}
@@ -60,6 +60,7 @@ new TWTR.Widget({
 
 h2. News
 
+{include:news-2011-02-15}
 {include:news-2011-01-11}
 {include:news-2010-11-25}
 {include:news-2010-11-14}
