--- a/src/main/webapp/index/community/news/news-2011-02-15.page
+++ b/src/main/webapp/index/community/news/news-2011-02-15.page
@@ -8,4 +8,4 @@ h1. Jamie Goodyear posted on Feb 15, 2011\\Karaf 2.1.4 released
 
 The Karaf team is pleased to announce the availability of [Karaf 2.1.4|Karaf 2.1.4 Release].
 This release of Apache Karaf is based off of the 2.1.x series branch, representing an update to Apache Karaf 2.1.3. It contains several bug fixes identified in the prior release, and introduces several improvements including; better behavior of the features-maven-plugin, documentation for making multiple configuration files available to the bundle context, and a more efficient bundle description for header display.
-For more information, please see the [release notes|Karaf 2.1.4 Release].
+For more information, please see the [release notes|index/community/download/karaf-2.1.4-release.html].
