--- a/src/main/webapp/index/community/download/karaf-2.2.0-release.page
+++ b/src/main/webapp/index/community/download/karaf-2.2.0-release.page
@@ -10,7 +10,7 @@ Download links can be found in the [Download] page.
 
 h2. Release Notes - Karaf - Version 2.2.0
 
-This release of Apache Karaf contains a multitude of new features, improvements, and bug fixes.  Some highlights include many new or updated commands, a LDAP JAAS module with login support, an updated feature service, a feature for Aries transaction, JPA & JNDI modules, expanded documentation, and new versions of most dependencies. The help system and manual have also undergone major updates. For more detail please see the change log below.
+This release of Apache Karaf contains a multitude of new features, improvements, and bug fixes.  Some highlights include many new or updated commands, a LDAP JAAS module with login support, an updated feature service, a feature for Aries transaction, JPA & JNDI modules, expanded documentation, and new versions of most dependencies. The help system and manual have also undergone major updates. Please note that if you are using pax-exam with scanFeatures that you also have to upgrade pax-exam to the latest version. For more detail please see the change log below.
 
 h3. Sub-task
  * [KARAF-392|https://issues.apache.org/jira/browse/KARAF-392] - Ability to use features-maven-plugin:add-features-to-repo without specifying features
@@ -73,6 +73,7 @@ h3. Bug
  * [KARAF-442|https://issues.apache.org/jira/browse/KARAF-442] - Wrong EventType called in FeaturesService.uninstallFeature
  * [KARAF-453|https://issues.apache.org/jira/browse/KARAF-453] - Manual war contains two web.xml files - cannot be served by pax-web
  * [KARAF-458|https://issues.apache.org/jira/browse/KARAF-458] - Fix the karaf shell to look nice within Eclipse console
+ * [KARAF-472|https://issues.apache.org/jira/browse/KARAF-472] - features-maven-plugin: TAB-characters in feature-repository lead to resolution-errors in add-features-to-repo
 
 h3. Improvement
  * [KARAF-5|https://issues.apache.org/jira/browse/KARAF-5] - \[karaf\] admin:create should support a -r, --rmi-registry-port option to allow the RMI registry port to be configured 
@@ -165,6 +166,7 @@ h3. Feature
  * [KARAF-380|https://issues.apache.org/jira/browse/KARAF-380] - Add .jar deployer autowrapping non-bundle-jar files dropped to deploy folder
  * [KARAF-391|https://issues.apache.org/jira/browse/KARAF-391] - Ability to use features-maven-plugin:add-features-to-repo without specifying features
  * [KARAF-426|https://issues.apache.org/jira/browse/KARAF-426] - Manage Karaf shell.name by branding
+ * [KARAF-473|https://issues.apache.org/jira/browse/KARAF-473] - Support version resolving in FeatureService#getFeatures(name/version)
 
 h3. Task
  * [KARAF-42|https://issues.apache.org/jira/browse/KARAF-42] - Use an svn based mechanism  for Karaf's manual
