--- a/src/main/webapp/index/community/download/karaf-2.2.0-release.page
+++ b/src/main/webapp/index/community/download/karaf-2.2.0-release.page
@@ -74,6 +74,7 @@ h3. Bug
  * [KARAF-453|https://issues.apache.org/jira/browse/KARAF-453] - Manual war contains two web.xml files - cannot be served by pax-web
  * [KARAF-458|https://issues.apache.org/jira/browse/KARAF-458] - Fix the karaf shell to look nice within Eclipse console
  * [KARAF-472|https://issues.apache.org/jira/browse/KARAF-472] - features-maven-plugin: TAB-characters in feature-repository lead to resolution-errors in add-features-to-repo
+ * [KARAF-480|https://issues.apache.org/jira/browse/KARAF-480] - Minor ansi issue with admin:rename command
 
 h3. Improvement
  * [KARAF-5|https://issues.apache.org/jira/browse/KARAF-5] - \[karaf\] admin:create should support a -r, --rmi-registry-port option to allow the RMI registry port to be configured 
@@ -167,6 +168,8 @@ h3. Feature
  * [KARAF-391|https://issues.apache.org/jira/browse/KARAF-391] - Ability to use features-maven-plugin:add-features-to-repo without specifying features
  * [KARAF-426|https://issues.apache.org/jira/browse/KARAF-426] - Manage Karaf shell.name by branding
  * [KARAF-473|https://issues.apache.org/jira/browse/KARAF-473] - Support version resolving in FeatureService#getFeatures(name/version)
+ * [KARAF-477|https://issues.apache.org/jira/browse/KARAF-477] - Karaf console should gracefully handle errors due to the history file being read only.
+ * [KARAF-478|htpps://issues.apache.org/jira/browse/KARAF-478] - Subclasses of Console should be able to change the history file.
 
 h3. Task
  * [KARAF-42|https://issues.apache.org/jira/browse/KARAF-42] - Use an svn based mechanism  for Karaf's manual
