--- a/src/main/webapp/index/developers/release-guide.page
+++ b/src/main/webapp/index/developers/release-guide.page
@@ -56,6 +56,12 @@ Your settings.xml should look like:
       <username> <!-- YOUR APACHE SVN USERNAME --> </username>
       <password> <!-- YOUR APACHE SVN PASSWORD --> </password>
     </server>
+    <!-- To deploy the manual -->
+    <server>
+        <id>people.apache.org</id>
+        <username> <!-- YOUR APACHE SVN USERNAME --> </username>
+        <password> <!-- YOUR APACHE SVN PASSWORD --> </password>
+    </server>
     ...
   </servers>
 </settings>
@@ -109,7 +115,7 @@ svn co https://svn.apache.org/repos/asf/karaf/trunk
 ## make sure everything builds fine
 ## check that your POMs will not lose content when they are rewritten during the release process:
 {code}
-mvn release:prepare -DdryRun
+mvn release:prepare -Pmanual -DdryRun
 {code}
 Please diff the original pom.xml with the one named pom.xml.tag to see if the license or any other info has been removed. This has been known to happen if the starting <project> tag is not a single line. The only things that should be different between these files are the <version> and <scm> elements. If there are any other changes, you must fix the original pom.xml file and commit before proceeding with the release.
 ## publish a snapshot
@@ -126,11 +132,11 @@ $ mvn deploy
 # Prepare the release
 {code}
 mvn release:clean
-mvn release:prepare
+mvn release:prepare -Pmanual
 {code}
 # Stage the release for a vote
 {code}
-mvn release:perform
+mvn release:perform -Pmanual
 {code}
 ** The release will automatically be inserted into a temporary staging repository for you, see the [Nexus staging|http://www.sonatype.com/books/nexus-book/reference/staging.html] documentation for full details
 ** You can continue to use mvn release:prepare and mvn release:perform on other sub-projects as necessary on the same machine and they will be combined in the same staging repository
