[KARAF-272] Update release notes.
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1074623 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/download/karaf-2.2.0-release.page
+++ b/src/main/webapp/index/community/download/karaf-2.2.0-release.page
@@ -75,6 +75,7 @@ h3. Bug
  * [KARAF-458|https://issues.apache.org/jira/browse/KARAF-458] - Fix the karaf shell to look nice within Eclipse console
  * [KARAF-472|https://issues.apache.org/jira/browse/KARAF-472] - features-maven-plugin: TAB-characters in feature-repository lead to resolution-errors in add-features-to-repo
  * [KARAF-480|https://issues.apache.org/jira/browse/KARAF-480] - Minor ansi issue with admin:rename command
+ * [KARAF-485|https://issues.apache.org/jira/browse/KARAF-485] - Karaf MBean not registered.
 
 h3. Improvement
  * [KARAF-5|https://issues.apache.org/jira/browse/KARAF-5] - \[karaf\] admin:create should support a -r, --rmi-registry-port option to allow the RMI registry port to be configured 
