--- a/src/main/webapp/index/community/download.page
+++ b/src/main/webapp/index/community/download.page
@@ -18,10 +18,10 @@ h2. Latest Releases
 
 Grab these releases while they are hot!
 
-The latest release is [Karaf 2.1.4 Release|download/karaf-2.1.4-release.html].
+The latest release is [Karaf 2.2.0 Release|download/karaf-2.2.0-release.html].
 
 Releases:
-* [#Karaf 2.1.4]
+* [#Karaf 2.2.0]
 
 {div}
 {column}
@@ -33,21 +33,21 @@ h2. Getting the latest distributions
 {info:title=The URLs below use redirection}
 The above URLs use the Apache Mirror system to redirect you to a suitable mirror for your download. Some users have experienced issues with some versions of browsers (e.g. some Safari browsers). If the download doesn't seem to work for you from the above URL then try using [Mozilla Firefox|http://www.mozilla.com/en-US/firefox/]
 {info}
-h2. Karaf 2.1.4
+h2. Karaf 2.2.0
 
-[Release Notes|download/karaf-2.1.4-release.html]
+[Release Notes|download/karaf-2.2.0-release.html]
 
 h3. Binary Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Distribution| [apache-karaf-2.1.4.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.1.4/apache-karaf-2.1.4.zip]|[PGP|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4.zip.md5]|
-|Unix/Linux/Cygwin Distribution| [apache-karaf-2.1.4.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.1.4/apache-karaf-2.1.4.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4.tar.gz.md5]|
+|Windows Distribution| [apache-karaf-2.2.0.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.2.0/apache-karaf-2.2.0.zip]|[PGP|http://www.apache.org/dist/karaf/2.2.0/apache-karaf-2.2.0.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.2.0/apache-karaf-2.2.0.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.2.0/apache-karaf-2.2.0.zip.md5]|
+|Unix/Linux/Cygwin Distribution| [apache-karaf-2.2.0.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.2.0/apache-karaf-2.2.0.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.2.0/apache-karaf-2.2.0.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.2.0/apache-karaf-2.2.0.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.2.0-apache-karaf-2.2.0.tar.gz.md5]|
 
 h3. Source Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Source Distribution| [apache-karaf-2.1.4-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.1.4/apache-karaf-2.1.4-src.zip]|[PGP|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.1.4-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.1.4/apache-karaf-2.1.4-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4-src.tar.gz.md5]|
+|Windows Source Distribution| [apache-karaf-2.2.0-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.2.0/apache-karaf-2.2.0-src.zip]|[PGP|http://www.apache.org/dist/karaf/2.2.0/apache-karaf-2.2.0-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.2.0/apache-karaf-2.2.0-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.2.0/apache-karaf-2.2.0-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.2.0-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.2.0/apache-karaf-2.2.0-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.2.0/apache-karaf-2.2.0-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.2.0/apache-karaf-2.2.0-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.2.0/apache-karaf-2.2.0-src.tar.gz.md5]|
 
 h2. Keys
 The {{KEYS}} used to sign the release can be found [here|http://www.apache.org/dist/karaf/KEYS].
