--- a/src/main/webapp/index/community/download/archives.page
+++ b/src/main/webapp/index/community/download/archives.page
@@ -8,6 +8,23 @@ h1. Releases history
 
 {toc:minLevel=2|maxLevel=2}
 
+h2. Karaf 2.1.4
+
+[Release Notes|Karaf 2.1.4 Release]
+
+h3. Binary Distribution
+
+||Description||Download Link|| || || ||
+|Windows Distribution| [apache-karaf-2.1.4.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.1.4/apache-karaf-2.1.4.zip]|[PGP|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4.zip.md5]|
+|Unix/Linux/Cygwin Distribution| [apache-karaf-2.1.4.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.1.4/apache-karaf-2.1.4.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4.tar.gz.md5]|
+
+h3. Source Distribution
+
+||Description||Download Link|| || || ||
+|Windows Source Distribution| [apache-karaf-2.1.4-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.1.4/apache-karaf-2.1.4-src.zip]|[PGP|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.1.4-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.1.4/apache-karaf-2.1.4-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.1.4/apache-karaf-2.1.4-src.tar.gz.md5]|
+
+
 h2. Karaf 2.1.3
 
 [Release Notes|Karaf 2.1.3 Release]
