--- a/src/main/webapp/site/navigation.page
+++ b/src/main/webapp/site/navigation.page
@@ -42,7 +42,7 @@ h3. [Community]
 
 h3. [Developers]
 
-- [Roadmap]
+- [Roadmap|https://cwiki.apache.org/confluence/display/KARAF/Roadmap]
 - [Source]
 - [Building]
 - [IRC Room]
