--- a/src/main/webapp/site/quicklinks.page
+++ b/src/main/webapp/site/quicklinks.page
@@ -4,4 +4,4 @@ page_version: 2
 page_creator: gnodet
 page_modifier: gnodet
 --- pipeline:conf
-[Download] \| [JavaDoc] \| [Source] \| [Forums|Discussion Forums] \| [Support]
+[Download] \| [Source] \| [Forums|Discussion Forums] \| [Support]
