[KARAF-495] Add a tutorials section and new resources to the website.
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1100156 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/articles.page
+++ b/src/main/webapp/index/community/articles.page
@@ -8,3 +8,8 @@ h2. Presentations
 
 * [JUG Poitou Charents - Apache, OSGi and Karaf|http://www.slideshare.net/gnodet/jug-poitou-charentes-apache-osgi-and-karaf]
 * [OSGi with Apache Felix Karaf|http://www.anova.be/files/OSGi%20with%20Apache%20Felix%20Karaf.pdf]
+* [Apache Karaf OSGi runtime in action (video)|http://www.dzone.com/links/video_apache_karaf_demo_osgi_runtime_in_action.html]
+
+h2. Tutorials
+
+* [Karaf Tutorial Part 1 - Installation and First application|http://www.liquid-reality.de/x/DIBZ]
