--- a/src/main/webapp/index/community/team.page
+++ b/src/main/webapp/index/community/team.page
@@ -31,5 +31,6 @@ h3. Contributors
 
 || Name || Organisation ||
 | [Lars Heinemann|http://lhein.blogspot.com/] | [FuseSource |http://fusesource.com/]|
+| Christian Schneider | [Talend |http://www.talend.com/] |
 | Michael Van Geertruy | |
 | Geert Schuring | |
