--- a/src/main/webapp/index/documentation/karaf-users-guide/4.-understanding-karaf/4.6.-provisioning.page
+++ b/src/main/webapp/index/documentation/karaf-users-guide/4.-understanding-karaf/4.6.-provisioning.page
@@ -295,5 +295,15 @@ In this example, we are using SpringDM with osgi as the primary namespace. Inste
 
 For more informations about using the Configuration Admin service in Spring-DM, see the [Spring-DM documentation|http://static.springframework.org/osgi/docs/1.2.0-m2/reference/html/compendium.html#compendium:cm:props].
 
+h3. Configuration files
+
+*Available since Karaf 2.2*
+
+In certain cases it is needed not only to provide configurations for the configuration admin service but to add additional configuration files e.g. a configuration file for jetty (jetty.xml). It even might be help full to deploy a configuration file instead of a configuration for the config admin service since. To achieve this the attribute {{finalname}} shows the final destination of the {{configfile}}, while the value references the maven artifact to deploy.
+
+{code}
+<configfile finalname="/etc/jetty.xml">mvn:org.apache.karaf/apache-karaf/${project.version}/xml/jettyconfig</configfile>
+{code}
+
 [#top]
 {scrollbar}
